Fix broken numbering alignment Use tabular numbers for guide nav to correct misalignment

--- a/app/assets/stylesheets/publisher.scss
+++ b/app/assets/stylesheets/publisher.scss
@@ -220,7 +220,7 @@ aside .page-navigation {
     margin-left: 1.5em;
     clear: left;
 
-    @include core-16;
+    @include core-16($tabular-numbers: true);
 
     @include ie-lte(7) {
       list-style: none;
